--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/styles.css" rel="stylesheet" />
-    <title>Monkidev | Comunidade</title>
+    <title>Monkidev | Formulário Comunidade</title>
   </head>
   <body>
     <main>
