NOME, E-MAIL E BOTÕES DE ACESSO.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
   </head>
   <body>
     <main>
-        
+        <TABLE WIDTH ="100%" BORDER="0" CELLSPACING="5">
+        <TR>
+          <TD WIDTH = "13%">Nome</TD>
+          <TD WIDTH = "87%"><INPUT TYPE = text NAME="nome"></TD>
+        </TR>
+        <tr>
+           <td>E-mail</td> 
+           <td><imput type = text NAME="email"></TD>
+        </tr>
+        <TR>
+          <TD><INPUT TYPE = submit NAME="enviar" VALUE = "Enviar"></TD>
+          <TD><INPUT TYPE = reset NAME="limpar" VALUE = "Limpar"></TD>
+        </TR>
+      </TABLE>
     </main>
   </body>
 </html>
